#78712 Fix flickering when selecting a month in Outbound

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_outbound.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_outbound.scss
@@ -67,6 +67,13 @@
 			box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
 			background: $white;
 		}
+
+		//For fixing flicker issue of uib-datepicker
+		.uib-monthpicker {
+			table tbody tr td:nth-child(n + 4) {
+				display: none;
+			}
+		}
 	}
 	.outbound-gantt-chart {
 		position: relative;
